--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
 	<body>
 		<!--Headings-->
 	<div id="wrap">
-		<div class="divide1">RITIK GUPTA</div>
-		<div class="divide2">ABOUT ME</div>
+		
+		<div class="divide2">RITIK GUPTA</div>
 	</div>
 	<br><br>
 	<br><br>
 	<p></p>
-		<div style="float:left" >
-			<img src="C:\Users\hp\Downloads\IMG_20190705_235028.jpg"style="transform:rotate(90deg);" width="800" height="1000" >
+		<div div class="wrapper">
+		<div class="item1">
+			<img src="C:\Users\hp\Downloads\IMG_20190705_235028.jpg"style="transform:rotate(90deg);" width="280" height="300" >
 			<button class="button1"><a href="#ONE">INTRODUCTION</a></button>
 			<br>
 			<button class="button2"><a href="#TWO">SKILLS</a></button>
@@ -27,48 +28,69 @@
 			<br><br>
 			<button class="button5"><a href="#FIVE">CONTACT</a></button>
 		</div>
-		<div class="right">
+		<div class="item2">
 			<div><h2 id="ONE">INTRODUCTION</h2></div>
 		<div>
 		<p>	
-			Hey,my name is Ritik Gupta.I am from Gorakhpur.I scored 92% marks in class 10th and 93% in class 12th.I am an optimistic and introvert person.My overall rank in uptu was 3197.My strong point is that I am very dedicated and focussed towards my work.My inspiration is Elon Musk and I want to become an enterpreneur like him.Hey,my name is Ritik Gupta.I am from Gorakhpur.I scored 92% marks in class 10th and 93% in class 12th.I am an optimistic and introvert person.My overall rank in uptu was 3197.My strong point is that I am very dedicated and focussed towards my work.My inspiration is Elon Musk and I want to become an enterpreneur like him.Hey,my name is Ritik Gupta.I am from Gorakhpur.I scored 92% marks in class 10th and 93% in class 12th.I am an optimistic and introvert person.My overall rank in uptu was 3197.My strong point is that I am very dedicated and focussed towards my work.My inspiration is Elon Musk and I want to become an enterpreneur like him.
-			Hey,my name is Ritik Gupta.I am from Gorakhpur.I scored 92% marks in class 10th and 93% in class 12th.I am an optimistic and introvert person.My overall rank in uptu was 3197.My strong point is that I am very dedicated and focussed towards my work.My inspiration is Elon Musk and I want to become an enterpreneur like him.Hey,my name is Ritik Gupta.I am from Gorakhpur.I scored 92% marks in class 10th and 93% in class 12th.I am an optimistic and introvert person.My overall rank in uptu was 3197.My strong point is that I am very dedicated and focussed towards my work.My inspiration is Elon Musk and I want to become an enterpreneur like him.Hey,my name is Ritik Gupta.I am from Gorakhpur.I scored 92% marks in class 10th and 93% in class 12th.I am an optimistic and introvert person.My overall rank in uptu was 3197.My strong point is that I am very dedicated and focussed towards my work.My inspiration is Elon Musk and I want to become an enterpreneur like him.
-
-
-
+			Hey,my name is Ritik Gupta.I am from Gorakhpur.I scored 92% marks in class 10th and 93% in class 12th.I am an optimistic and introvert person.
+			My overall rank in uptu was 3197.My strong point is that I am very dedicated and focussed towards my work.My inspiration is Elon Musk and I want
+			to become an  enterpreneur like him Ritik Gupta.I completed my basic education from elementary school in my hometown.Currently I am pursuing an 
+			undergraduate degree with one of the most reputed college of uptu i.e Ajay Kumar Garg Engineering College.
 		</p>	
 		</div>
+		<div>
+			<img src="C:\Users\hp\Desktop\html sheet\images\ajaykumargarg.jpg"class="imagine2"/> 
+		</div>
+		<br>
 	<div>
 		<h2 id="TWO">SKILLS</h2>
 	</div>
 	<div>
-		<p>I am a competive coder in c++ at software incubator.I also know python and had made projects on it.Apart from this I have knowledge about html and css as well.Hey,my name is Ritik Gupta.I am from Gorakhpur.I scored 92% marks in class 10th and 93% in class 12th.I am an optimistic and introvert person.My overall rank in uptu was 3197.My strong point is that I am very dedicated and focussed towards my work.My inspiration is Elon Musk and I want to become an enterpreneur like himHey,my name is Ritik Gupta.I am from Gorakhpur.I scored 92% marks in class 10th and 93% in class 12th.I am an optimistic and introvert person.My overall rank in uptu was 3197.My strong point is that I am very dedicated and focussed towards my work.My inspiration is Elon Musk and I want to become an enterpreneur like him.
- </p>
+		<p>I am a competive coder in c++ at software incubator.I also know python and had made projects on it.Apart from this I have knowledge about html and css
+		 as well.In my school,I was one of the best athletes.My interest is also in swimming and I was doing it for the last five
+		  years until I came to college.I am also good at chess and had payed in the sports event of our college.
+			
+ 		</p>
+ 	<div>
+ 		<img src="C:\Users\hp\Desktop\html sheet\images\josh-sorenson-wzPFQKHtwgw-unsplash.jpg" class="imagine"/>
+ 	</div>
 	</div>
 	<div>
 		<h2 id="THREE">ACHIEVEMENTS</h2>
-		<p >
-			I have 3 star rating on codechef and 5 star rating on hackerrank.I am also certified with coding ninjas certificate for completing the course of c++ foundation with data structures.Hey,my name is Ritik Gupta.I am from Gorakhpur.I scored 92% marks in class 10th and 93% in class 12th.I am an optimistic and introvert person.My overall rank in uptu was 3197.My strong point is that I am very dedicated and focussed towards my work.My inspiration is Elon Musk and I want to become an enterpreneur like himHey,my name is Ritik Gupta.I am from Gorakhpur.I scored 92% marks in class 10th and 93% in class 12th.I am an optimistic and introvert person.My overall rank in uptu was 3197.My strong point is that I am very dedicated and focussed towards my work.My inspiration is Elon Musk and I want to become an enterpreneur like him.
-
+	</div>
+	<div>
+		<p class="indent">
+			I have 3 star rating(1622) on codechef and 5 star rating(1588) on hackerrank.I am also certified with coding ninjas certificate for completing the course of c++ foundation with data structures.
 
 		</p>
 	</div>
 		
-		<h2 id="FOUR">HOBBIES</h4>
-		<p>
-			My hobbies include swimming,dancing and playing cricket.Apart from it I love listening to music.I am also fond of watching web series.Hey,my name is Ritik Gupta.I am from Gorakhpur.I scored 92% marks in class 10th and 93% in class 12th.I am an optimistic and introvert person.My overall rank in uptu was 3197.My strong point is that I am very dedicated and focussed towards my work.My inspiration is Elon Musk and I want to become an enterpreneur like him
+			<h2 id="FOUR">HOBBIES</h2>
+		<div>
+			<p class="indent">
+			My hobbies include swimming,dancing and playing cricket.Apart from it I love listening to music.I am also fond of watching web series.
 		</p>
-		<h2 id="FIVE">CONTACT</h2>
-		<p>
+		</div>
+		<div>
+			<h2 id="FIVE">CONTACT</h2>
+		</div>
+		
+		<div>
+			<p class="indent">
 			PhoneNo:7054343006.
 			<br><br>
 			Email:ritikgupta0912@gmail.com
 			<br><br>
-			Facebook:<a href="https://www.facebook.com/profile.php?id=100010143617527" target="_blank">Ritik Gupta</a>
+			Facebook:<a href="https://www.facebook.com/profile.php?id=100010143617527" target="_blank">Ritik Gupta</a><br>
+			<img src="C:\Users\hp\Desktop\html sheet\images\facebook.jpg"class="imagine"/>
 			<br><br>
 			Instagram:<a href="https://www.instagram.com/ritik.09/" target="_blank">ritik_09</a><br>
+			<img src="C:\Users\hp\Desktop\html sheet\images\instagram.jpg" class="imagine"/>
 		</p>
 		</div>
+		</div>
+		</div>
+
 		
 	</body>
 </html>
