--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	</div>
 	<div>
 		<p>I am a competive coder in c++ at software incubator.I also know python and had made projects on it.Apart from this I have knowledge about html and css
-		 as well.In my school,I was one of the best athletes.My interest is also in swimming and I was doing it for the last five
+		 as well.I also know c and have basic idea of java.In my school,I was one of the best athletes.My interest is also in swimming and I was doing it for the last five
 		  years until I came to college.I am also good at chess and had payed in the sports event of our college.
 			
  		</p>
@@ -60,7 +60,7 @@
 	</div>
 	<div>
 		<p class="indent">
-			I have 3 star rating(1622) on codechef and 5 star rating(1588) on hackerrank.I am also certified with coding ninjas certificate for completing the course of c++ foundation with data structures.
+			I have 3 star rating(1622) on codechef and 5 star rating(1588) on hackerrank.I am also certified with coding ninjas certificate for completing the course of c++ foundation with data structures.I have also won medals in running and swimming in my school days.
 
 		</p>
 	</div>
@@ -68,7 +68,7 @@
 			<h2 id="FOUR">HOBBIES</h2>
 		<div>
 			<p class="indent">
-			My hobbies include swimming,dancing and playing cricket.Apart from it I love listening to music.I am also fond of watching web series.
+			My other hobbies include swimming,dancing,chess and playing cricket.Apart from it I love listening to music.I am also fond of watching web series.I 
 		</p>
 		</div>
 		<div>
@@ -82,7 +82,7 @@
 			Email:ritikgupta0912@gmail.com
 			<br><br>
 			Facebook:<a href="https://www.facebook.com/profile.php?id=100010143617527" target="_blank">Ritik Gupta</a><br>
-			<img src="C:\Users\hp\Desktop\html sheet\images\facebook.jpg"class="imagine"/>
+			<img src="C:\Users\hp\Desktop\html sheet\images\752186-facebook-comedy-wallpaper-2018-1920x1080-for-android-50.jpg"class="imagine"/>
 			<br><br>
 			Instagram:<a href="https://www.instagram.com/ritik.09/" target="_blank">ritik_09</a><br>
 			<img src="C:\Users\hp\Desktop\html sheet\images\instagram.jpg" class="imagine"/>
